--- a/VRChat/55/1139555.html
+++ b/VRChat/55/1139555.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eGhn0eqtIBFC7NsvDRsek+SyZ5W6lQk1GMMowlLB0GE="></script>
+    "1y7dloKPJ7zA5pW8XeOsENhgjO8Au1lYE19lRzf+dxw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"FakeLightToonShader","description":"Unity用のUnlitシェーダです。\nシーンのライティングに関わらずシェーダで設定したライティングになります。\n\n通常DL版と支援版の内容物は同一です。\n\nこのシェーダはShader Forge（ http://www.acegikmo.com/shaderforge/ ）を使用して作成されました。\n\nReleased under the MIT license.\nhttps://opensource.org/licenses/mit-license.php\n\n導入方法\n１．「FakeLightToon_v1.0.shader」ファイルをUnityの「Assets」フォルダ以下の任意の位置に追加してください。\n２．マテリアルのShaderタブに「FakeLightShader/FakeLightToon_v1.0」が追加されているので選択することで導入が完了します。\n(v1.0はその時のバージョンによって数字が変わります。)\n\nプロパティの説明\n・normal\nノーマルマップを設定できます。使わない場合はNoneのままで大丈夫です。\n\n・step_level\n光の強さに対する影の付け方のしきい値です。値を大きくするほど影の領域が多くなります。\n\n・Albedo\nモデルのカラー情報です。モデルに適用するテクスチャを設定してください。\n\n・Albedo_Color\nAlbedoテクスチャに乗算する色情報です。色味を調整したい場合以外は白にしてください。\n\n・use_Shadow_Albedo\n影色に別のテクスチャを使う場合はチェックを入れてください。\n\n・shadow_Albedo\n影色に使うモデルのカラー情報です。使用する場合はuse_Shadow_Albedoにチェックを入れてください。\n\n・Shadow_Color\n影色に乗算する色情報です。\nuse_Shadow_Albedoにチェックが入ってない場合：\nAlbedoの影部分に色が乗算されます。\nuse_Shadow_Albedoにチェックが入っている場合：\nshadow_Albedoに色が乗算されます。\n\n・Outline_Width\nアウトラインの太さの値です。\n\n・Color_Outline\nアウトラインの色です。\n\n・fake_light_position\n偽の光源の位置情報です。X,Y,Zの値を調節してちょうどよい位置に移動させてください。\n\n・use_rimlight\nリムライトを使う場合はチェックを入れてください。\n\n・rimlight_power\nリムライトの強さの値です。\n\n・rimlight_color\nリムライトの色です。","url":"https://booth.pm/ja/items/1139555","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e1cb2816-75d6-4f1f-9f88-6087b87ed648/i/1139555/00034ca6-4442-4c17-8151-4ec10ec32fd9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eGhn0eqtIBFC7NsvDRsek+SyZ5W6lQk1GMMowlLB0GE="></script>
+    nonce="1y7dloKPJ7zA5pW8XeOsENhgjO8Au1lYE19lRzf+dxw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1139555/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1139555/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
