--- a/VRChat/74/1139574.html
+++ b/VRChat/74/1139574.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Hbnhb0JqdUswelQJC/V2X0PHlVDyFeuwr2ARmDr0DA0="></script>
+    "30SR5OuPuy8s2xF77epcvE2r95QwyzCH45JvShYU5qQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"GPUパーティクル 花火","description":"VRChat向けのGPUパーティクルで作成された花火です。\n\nVRChat以外にも、unity shaderが使える環境なら使用可能です。\n\nグラフィックボードが載っている環境なら、Unityのパーティクルシステムよりも低負荷で花火を上げることが出来ます。\n\nこれ一つを配置するだけで５個の花火が打ち上がり続けます。\n\n字幕等説明はありませんが詳しくは下の動画を御覧ください。\n\nhttps://twitter.com/suraimu752/status/1074241001890316288\n\n不具合、ご要望（機能追加等）ありましたら気軽にツイッター等で伝えてください！\n\n過去バージョンもダウンロード可能にしてありますが、基本的に最新バージョン（数字の大きなもの）を推奨します。","url":"https://booth.pm/ja/items/1139574","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/ab6abf2f-1e54-4c70-92b9-8e0aa2a0b4a6/i/1139574/07b56548-8289-4450-844c-65977e100017_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Hbnhb0JqdUswelQJC/V2X0PHlVDyFeuwr2ARmDr0DA0="></script>
+    nonce="30SR5OuPuy8s2xF77epcvE2r95QwyzCH45JvShYU5qQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1139574/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               131
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1139574/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               131
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
