--- a/VRChat/20/1139420.html
+++ b/VRChat/20/1139420.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PJmRWv6cAND2xXkszSImFfZC1UqEeE+5I0f4ymcuteU="></script>
+    "xcbeY162xkFLz5i26aqpfUTuJG1EUj3mDVMZNU6Vd00="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【スキニング済み】メカ少女向け改造キット第2段　MNTG-02","description":"メカチックな手足です。好みの3Dモデルを簡単にメカ娘にできます。\n\n●仕様\nこの製品はVRアバター向けの改造用3Dモデルです。\n\n△ポリゴン数4808\nスキニング済ですので比較的簡単に導入ができます。\n\n●商業利用\n本データのR-18への利用や改変については自由です。\nまた、営利目的での利用も可能です。ゲーム等ご自由にお使いください。\nこのモデルを利用した作品を制作した場合は連絡を下されば大変喜びます。\n\n●禁則事項\n本データの改変が可能な状態での販売は禁止します。\n本データを利用したことによる損害に対する責任は負わないものとします。\nまた、特定個人や団体への中傷を目的とした利用を禁止します。\n本データ及びその改変モデルの著作権については大本の製作者である ガロス に帰属します。","url":"https://booth.pm/ja/items/1139420","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/3b675027-b6f1-46ed-a792-ba287fa9d0ce/i/1139420/cf1dbeb2-0535-4064-82ba-bc1ce4f113c6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PJmRWv6cAND2xXkszSImFfZC1UqEeE+5I0f4ymcuteU="></script>
+    nonce="xcbeY162xkFLz5i26aqpfUTuJG1EUj3mDVMZNU6Vd00="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1139420/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              30
+                              31
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1139420/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              30
+                              31
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
