--- a/VRChat/45/1137145.html
+++ b/VRChat/45/1137145.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "oAQHNHs8is8lsq+VGekq7Ti8U5wsqShRQSnrAFpm81Y="></script>
+    "O9jcbFqQTztZdWQZ/FQfdAcRPNnf3PuWw2gSzYsDGhE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[Free]VRC3DShader","description":"VRChat用に機能を追加した、3D映像用のシェーダーです。\n動画サイトにある3D映像をVRChat内で見ることができます。\nOver-Under方式とSide-by-Side方式両方に対応しているほか、VRChatのSyncVideoPlayerとSyncVideoStreamの両方で使えるようにするため、ガンマ補正機能と特殊なUVの計算方法をしています。\nまた、Amplify Shader Editorを使用して作成しているので、該当アセットを所有している場合は簡単にカスタマイズすることができます。\n","url":"https://booth.pm/ja/items/1137145","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"}}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oAQHNHs8is8lsq+VGekq7Ti8U5wsqShRQSnrAFpm81Y="></script>
+    nonce="O9jcbFqQTztZdWQZ/FQfdAcRPNnf3PuWw2gSzYsDGhE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1137145/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1137145/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
