--- a/VRChat/16/1138916.html
+++ b/VRChat/16/1138916.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "aBKx8xkMmIeHMeKru5e3avGXOBFH4MfyxNyiFv61CQQ="></script>
+    "PZupWG801NkFBX6tpbYpSUS9eLLD8FnrEctyhvvkvH4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"白い吐息パーティクル","description":"＃概要\nVRChatでの使用を想定した、呼吸をしているように見える白い吐息を出すパーティクルです。\n\n冬の寒さも本格的になってきたこの頃、吐く息も白くなってくる季節となってきました。\n息が見えると近くにいる実在感も増してきます。\n雪や温泉のワールドが似合うパーティクルはいかがですか。\n\n\n使用例のサンプルには\n\nひゅうがなつみかん様製作の京狐さん \nhttps://booth.pm/ja/items/1826902\n\nむた様製作のキッシュちゃん素体\nhttps://mutachannel.booth.pm/items/1026956\n\nmomo様製作のスクールブレザー\nhttps://booth.pm/ja/items/1972707\n\nVOICEROID2 紲星あかりを使わせていただいています。","url":"https://booth.pm/ja/items/1138916","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a0ea27a1-0ce8-4aaf-9bac-bbd245b8b6c8/i/1138916/334b235e-9f96-4fec-abe1-ea2439e7d05e_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aBKx8xkMmIeHMeKru5e3avGXOBFH4MfyxNyiFv61CQQ="></script>
+    nonce="PZupWG801NkFBX6tpbYpSUS9eLLD8FnrEctyhvvkvH4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,10 +182,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1138916/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              3366
+                              3372
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1138916/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              3366
+                              3372
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
