--- a/VRChat/06/1138806.html
+++ b/VRChat/06/1138806.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xwJSRgvxFM+RuyNM/pWUCT2CFku/2F0SSiOLMD5wS7Q="></script>
+    "xo8MDj8q0/NPA1RV+oShhiUVaZjPjRPVrC/l7rM37nE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ヘッドセット+メディス子向け機械化パーツ","description":"ヘッドセットと機械式羽のセットです。\n主に　https://armadillon.booth.pm/items/1130532　のアルマジロン制作メディカルセンタースタッフさん向けに仕上げたものとなっておりますが、おそらく他アバターにも運用が可能です。\n\n\n同梱したアニメーターをChest部に追加したAnimetorコンポーネントに導入したうえで翼を非常にする。またはエモートスイッチを実装することで全表示運用が可能です。","url":"https://booth.pm/ja/items/1138806","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1138806/ee81ca35-ac66-43c0-a17e-fd7d1a3ab9df_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xwJSRgvxFM+RuyNM/pWUCT2CFku/2F0SSiOLMD5wS7Q="></script>
+    nonce="xo8MDj8q0/NPA1RV+oShhiUVaZjPjRPVrC/l7rM37nE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1138806/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               476
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1138806/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               476
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
