--- a/VRChat/42/1138742.html
+++ b/VRChat/42/1138742.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NgSbXnLwyEta7EtSO/0PiIX00zqxP4uIhZhm4yhIb0U="></script>
+    "+En1eXHBtQy1okjL7JZAlBu3/HDiwt4VN5OIVAz/ZLo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"IMR-170 ELEMENTUM","description":"当製品は当社のIMR-170 EREMENTUM を販売モデルとして調整したモデルとなります。\nぜひともお客様の手でオリジナリティを出してご使用いただければ嬉しく思います。(もちろんそのままご使用いただいても問題ありません)\n\n・ご使用に際してのルール\n1.著作権は作者であるRocket-Lapinに帰属します。放棄はしませんのでご注意ください。(改変されても大元の権利はRocket-Lapinに帰属します。)\n\n2.以下のような使用は禁止します。\n　　・公序良俗に反する利用\n　　・政治的、宗教的主張に関する利用\n　　・再配布、再販売は禁止(VRCなどのように購入者本人が使用するためにアップロードが必要な場合は、本人が使用する場合に限り許可します。\n　　　アバターペデスタルなどで本人以外の方が利用できる状態にすることは禁止させていただきます。)\n　　・自作発言はしないでね♡(ご自身で改変された箇所に関しての自前加工発言、自慢はしてもらって大丈夫です。むしろその技術がすごいのです、\n　　　どんどん広めましょう！)\n\n3.やってもいいこと。\n　　・テクスチャ改変、モデル改変、営業目的での利用、収益化目的の動画の主催、参加、映り込みOK、VTuber活動もやっていただいて構いません。\n　　　その時は教えてね！見に行くよ！（VTuber活動をされる際は改変をお願いします！)\n\n4.やってほしいこと（重要！）\n　　・ガンガン振り回せ！己が存在を証明せよ！\n\n5.免責事項\n　　・本モデルデータ、および改変したモデルを使用したことにより発生したトラブルや損失に関して、作者とその関係者、およびその所属する\n　　　いかなる団体も、一切の責任を負わないものとします。\n　　・振り回す際は周囲の空気を読んで、安全に注意してご使用ください。\n\n　　　　以上、取扱説明書でした。\n\n　　　不明な点、質問、問い合わせなどありましたら@RocketLapinまたはrocketlapin@gmail.comまで連絡ください。\n\n　　　基本スタンダードシェーダーがおすすめですが、同梱の2Dテクスチャをご利用いただければその他シェーダーでも安定した発色が可能です。\n　　　ライト部分の色変えについては添付画像をご覧ください。","url":"https://booth.pm/ja/items/1138742","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4a2068d0-e3b2-4bfe-af45-d14222c245e6/i/1138742/2d446dc9-261d-4f5c-b109-561b60b38d0e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NgSbXnLwyEta7EtSO/0PiIX00zqxP4uIhZhm4yhIb0U="></script>
+    nonce="+En1eXHBtQy1okjL7JZAlBu3/HDiwt4VN5OIVAz/ZLo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1138742/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1138742/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
