--- a/VRChat/27/1138327.html
+++ b/VRChat/27/1138327.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "V4/yshskM5wH/CE/usLKIaUy/830HgoLJhKAyaRqekI="></script>
+    "VBbzD9Y0uvM7JHT5ruiJKb9L/HffpWOlC88OmP1A2NY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ソリ(482ポリ)","description":"ソリです。fbxが入ってます。\n\nUV展開してません。\nシェーダーのみで色つけてます。\n気が向いたらUV展開するかもしれません。\n\nご自由にお使いください。\n\n「自由に使えるとかやばくね？」\n「ソリ」\n\n商用・非商用 使用可\n改変可\n再配布可","url":"https://booth.pm/ja/items/1138327","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f9645990-9f02-4323-a296-fb5f41046b0b/i/1138327/281ee67c-9cae-4693-b1d2-90f16e4440a7_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="V4/yshskM5wH/CE/usLKIaUy/830HgoLJhKAyaRqekI="></script>
+    nonce="VBbzD9Y0uvM7JHT5ruiJKb9L/HffpWOlC88OmP1A2NY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1138327/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1138327/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
